<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileimage"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:src="@drawable/nav" />

            <TextView
                android:id="@+id/profileusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/profileuserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userid"
                android:textStyle="bold"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/profileemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="15dp"
                />
            <TextView
                android:id="@+id/profilephoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/profileaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                />


    </LinearLayout>

    </ScrollView>

</LinearLayout>