<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Personal Information"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/username" />

            <EditText
                android:id="@+id/signupusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter name"
                android:ems="12"
                android:maxLines="1"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/userid" />

            <EditText
                android:id="@+id/signupuserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/userid"
                android:ems="12"
                android:maxLines="1"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="@string/email" />

            <EditText
                android:id="@+id/signupemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ems="12"
                android:hint="Enter your email"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="@string/password" />

            <EditText
                android:id="@+id/signuppassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="Conform Password" />

            <EditText
                android:id="@+id/signupconformpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPassword"
                android:hint="Password"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/signupphoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:maxLines="1"
                android:ems="12"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/payment_method"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="Sign up"
                android:textAlignment="center"
                android:textColor="@color/offwhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="or" />
                <TextView
                    android:id="@+id/signuptologin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:text="already have an account?"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>